--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<title>GIT</title>
 </head>
 <body>
-	<p>Welcome to Version Control</p>
+	<center><h2>Welcome to Version Control</h2>
 	<p>Testing with gihub</p>
+	<p>did some changes</p></center>
+
 </body>
 </html>
