--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>GIT</title>
+	<link rel="stylesheet" type="text/css" href="css.css">
 </head>
 <body>
 	<center><h2>Welcome to Version Control</h2>
 	<p>Testing with gihub</p>
-	<p>did some changes</p></center>
+	<p>did some changes</p>
+</center>
 
 </body>
 </html>
