--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>GIT</title>
 	<link rel="stylesheet" type="text/css" href="css.css">
 </head>
-<body>
+<body style="background-color: gray; color: white;">
 	<center><h2>Welcome to Version Control</h2>
 	<p>Testing with gihub</p>
 	<p>did some changes</p>
